B-F Sandbox Full-Backup/src/objects/News__c.object
<CustomObject>
    <description>Post News</description>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Breaking_News__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When you check this field, it will place a banner across the top with a link to this story.</inlineHelpText>
        <label>Breaking News</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <description>Enter content</description>
        <inlineHelpText>Enter content</inlineHelpText>
        <label>Content</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_URL__c</fullName>
        <description>Enter External URL.</description>
        <inlineHelpText>Enter External URL. No entry required if pointing to this document.</inlineHelpText>
        <label>External URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>criteria for Featured section of NewsHome VF Page</description>
        <inlineHelpText>Check this field if you wish this article to show in the Featured section of the News Page</inlineHelpText>
        <label>Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>Select the Category of the news article.</description>
        <inlineHelpText>Select the Category of the news article.</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Story of the Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video of the Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Alert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thumbnail_URL__c</fullName>
        <label>Thumbnail URL</label>
        <type>Url</type>
    </fields>
    <label>Manage News</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Group__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brand_News</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Brands</value>
        </filters>
        <label>Brand News</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Breaking_News</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Group__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Breaking_News__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Breaking News</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Company_News</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Company</value>
        </filters>
        <label>Company News</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Employee_News</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Employee</value>
        </filters>
        <label>Employee News</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Featured</fullName>
        <columns>UPDATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Featured__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Featured</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Story_of_the_Day</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Story of the Day</value>
        </filters>
        <label>Story of the Day</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Video_of_the_Day</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Video of the Day</value>
        </filters>
        <label>Video of the Day</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>News-{000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manage News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>